button touch element alignment fix

--- a/components/src/button/button/button.scss
+++ b/components/src/button/button/button.scss
@@ -70,7 +70,6 @@
     width: 100%;
     top: auto;
     left: 0;
-    transform: translateY(-25%);
   }
 
   /* make the icon slot itself collapsible so removal animates smoothly */
